Fixing sizing and spacing
Working on sizing for cellphones. When width decreases to somewhere under 400 the site runs away from the left side of the screen. Fixed for some devices.
also changed text size and spacing for all widths

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,15 @@ url("http://fonts.googleapis.com/css?family=Amiko:300,400,700,900")
 	box-sizing: border-box;
 }
 
+/*
+@media (max-width : 400px) {
+	 {
+		
+	}
+}*/
+
+
+
 @viewport {
 	zoom: 1.0;
 	width: extend-to-zoom;
